--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,9 @@
 }
 
 body {
-  background-color: #e5e5e5;
   color: var(--primary-text-color);
   text-decoration: none;
-
   font-family: Roboto, sans-serif;
-  
 }
 
 ul {
@@ -25,52 +22,36 @@ ul {
 /* Logo */
 
 .logo {
+  font-family: Raleway, cursive;
   text-decoration: none;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
-.logo-one {
+.logo-first {
   color: var(--accent-color);
-  font-family: Raleway, cursive;
-  font-weight: 700;
-  Font size: 26px;
-  Line height: 1.19;
-  
 }
 .logo-half {
   color: var(--title-text-color);
-  font-family: Raleway, cursive;
-  font-weight: 700;
-  Font size: 26px;
-  Line height: 1.19;
-  
 }
 
-.logo-footer{
+.logo-footer {
   color: var(--white-color);
-  font-family: Raleway, cursive;
-  font-weight: 700;
-  Font size: 26px
-  Line height: 1.19
-  
 }
-
-
-
-
 
 /* Site nav */
 
-
 .site-nav .link {
   color: var(--title-text-color);
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   text-decoration: none;
   font-weight: 500;
-  Font size: 14px;
-  Line height: 1.14;
-  
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
-
 
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -81,7 +62,6 @@ ul {
   color: var(--accent-color);
 }
 
-
 .info .link {
   color: var(--title-text-color);
   text-decoration: none;
@@ -89,8 +69,13 @@ ul {
 
 /* Info */
 
-.info .link{
+.info .link {
   color: var(--primary-text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  text-align: left;
+  letter-spacing: 0.02em;
 }
 
 .info .link:focus,
@@ -108,8 +93,8 @@ ul {
   text-align: center;
   font-weight: 900;
   font-size: 44px;
-  line height: 1.36;
-  
+  line-height: 1.36;
+  letter-spacing: 0.06em;
 }
 
 /* Button */
@@ -119,28 +104,30 @@ ul {
   background-color: var(--accent-color);
   cursor: pointer;
   font-family: inherit;
-  Font style: Bold
-  Font size: 16px
-  Line height: 1.87
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
 }
 
 .button.primary {
   background-color: var(--accent-color);
   color: var(--white-color);
-  
+  letter-spacing: 0.06em;
 }
 
 .button.primary:hover,
 .button.primary:focus {
   background-color: #188ce8;
-  
 }
 
 .button.secondary {
   background-color: #f5f4fa;
   color: var(--title-text-color);
+  font-weight: 500;
+  line-height: 1.6;
   cursor: pointer;
   font-family: inherit;
+  letter-spacing: 0.03em;
 }
 
 .button.secondary:hover,
@@ -150,108 +137,121 @@ ul {
   color: var(--white-color);
 }
 
-
 /* Feature-list */
 
 .feature {
-  background-color: #E5E5E5;
+  background-color: white;
   color: var(--title-text-color);
   text-align: left;
 }
 
- .feature-list .title{
-Font size: 14px;
-Line height: 1.14;
-Align: Left 
-} 
-
-.feature-list .text{
-color: var(--primary-text-color);
-Font size: 14px;
-Line height: 1.7;
+.feature-list .title {
+  color: var(--title-text-color);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
 }
 
-.caption, 
-.comand .topic{
+.feature-list .text {
+  color: var(--primary-text-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+.caption,
+.comand .topic {
   color: var(--title-text-color);
   text-align: center;
-  Font size: 36px;
-Line height: 1.16
+  font-size: 36px;
+  line-height: 1.16;
+  font-weight: 700;
+  letter-spacing: 0.03em;
 }
-
-
 
 /* Work list portfolio */
 
-.work-list{
+.work-list {
   color: var(--title-text-color);
+}
+
+.work-list-link {
+  text-decoration: none;
 }
 
 .work-list-title {
   color: var(--title-text-color);
   font-weight: 700;
-  Font size: 18px;
-  Line height: 2;
-  Align: Left
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .work-list-text {
   color: var(--primary-text-color);
   font-weight: 400;
-  Font size: 16px;
-  Line height: 1.8;
-  Align: Left
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
 }
-
-
-
 
 /* Comand */
 
 .comand {
   background-color: #f5f4fa;
   color: var(--title-text-color);
-  
 }
 
-.topic-text, .text-comand{ 
+.topic-text,
+.text-comand {
   text-align: center;
 }
 
-.topic-text{
+.topic-text {
   color: var(--title-text-color);
   font-weight: 500;
-  Font size: 16px;
-  Line height: 1.18
+  font-size: 16px;
+  line-height: 1.18;
 }
 
 .text-comand {
   color: var(--primary-text-color);
   font-weight: 400;
-  Font size: 16px;
-  Line height: 1.18;
-
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
 }
-
 
 /* Footer */
 
 .page-footer {
   background-color: #2f303a;
-  font-family: Roboto, sans-serif;
+  font-family: inherit;
 }
 
 .portfolio-footer {
   background-color: #2f303a;
-  font-family: Roboto, sans-serif;
+  font-family: inherit;
 }
 
-.adress{
+.adress {
   color: var(--white-color);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
-  Font size: 14px;
-Line height: 1.7;
-Align: Left;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+.adress .link-foot {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.adress .link-foot:focus,
+.adress .link-foot:hover {
+  color: var(--white-color);
 }
